--- a/views/login.html
+++ b/views/login.html
@@ -5,11 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>SkyWise</title>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/fav16.png?h=a119ef58c4c7e9dd2f93856383e0c398">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/fav32.png?h=2998f2c2ea0b9c9d42fd9f3d643e7530">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/fav192.png?h=7562e8d2b690ec58961014a0ccee3003">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180"
+        href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="assets/img/favicons/fav16.png?h=a119ef58c4c7e9dd2f93856383e0c398">
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="assets/img/favicons/fav32.png?h=2998f2c2ea0b9c9d42fd9f3d643e7530">
+    <link rel="icon" type="image/png" sizes="180x180"
+        href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
+    <link rel="icon" type="image/png" sizes="192x192"
+        href="assets/img/favicons/fav192.png?h=7562e8d2b690ec58961014a0ccee3003">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=3f30c2c47d7d23c7a994db0c862d45a5">
     <link rel="stylesheet" href="assets/css/Aclonica.css?h=367626b56dc060bacaf8eb1624585097">
     <link rel="stylesheet" href="assets/css/Acme.css?h=c24fe385d4a8bc4328985bce204b8c90">
@@ -30,16 +35,23 @@
         <div class="tada animated brand-logo-container">
             <h1>Sky<span>Wise</span></h1>
             <div class="logo-gif-container">
-                <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_jmgekfqg.json" mode="bounce" background="transparent" speed="1" loop="" autoplay=""></lottie-player>
+                <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_jmgekfqg.json" mode="bounce"
+                    background="transparent" speed="1" loop="" autoplay=""></lottie-player>
             </div>
         </div>
-        <div class="input-container"><i class="far fa-user-circle"></i><input type="text" id="username" class="login-username-input login-input" placeholder="Username"></div>
-        <div class="input-container"><i class="fas fa-key"></i><input type="password" id="password" class="login-password-input login-input" placeholder="Password"><i class="fas fa-eye" id="eyeIcon" onclick="togglePasswordVisibility(&#39;password&#39;, &#39;eyeIcon&#39;)"></i></div>
-        <div class="login-register-button-container"><button class="btn btn-primary login button-control" type="button">Login</button><button class="btn btn-primary signup button-control" type="button" onclick="location.href =&#39;register.html&#39;">Signup</button></div>
+        <div class="input-container"><i class="far fa-user-circle"></i><input type="text" id="username"
+                class="login-username-input login-input" placeholder="Username"></div>
+        <div class="input-container"><i class="fas fa-key"></i><input type="password" id="password"
+                class="login-password-input login-input" placeholder="Password"><i class="fas fa-eye" id="eyeIcon"
+                onclick="togglePasswordVisibility(&#39;password&#39;, &#39;eyeIcon&#39;)"></i></div>
+        <div class="login-register-button-container"><button class="btn btn-primary login button-control"
+                type="button">Login</button><button class="btn btn-primary signup button-control" type="button"
+                onclick="location.href =&#39;register.html&#39;">Signup</button></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.min.js"></script>
     <script src="assets/js/bs-init.js?h=ec5d4df3c798a2943b2ecbac76ebfde0"></script>
+    <script src="assets/js/loginAuth.js?h=6e30b7cbbf254a31527c34a779b59764"></script>
     <script src="assets/js/auth.js?h=6e30b7cbbf254a31527c34a779b59764"></script>
     <script src="assets/js/passChecker.js?h=786c836da190ab192faba8a2c4461fd5"></script>
 </body>
