--- a/views/register.html
+++ b/views/register.html
@@ -5,29 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>SkyWise</title>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180"
-        href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
-    <link rel="icon" type="image/png" sizes="16x16"
-        href="assets/img/favicons/fav16.png?h=a119ef58c4c7e9dd2f93856383e0c398">
-    <link rel="icon" type="image/png" sizes="32x32"
-        href="assets/img/favicons/fav32.png?h=2998f2c2ea0b9c9d42fd9f3d643e7530">
-    <link rel="icon" type="image/png" sizes="180x180"
-        href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
-    <link rel="icon" type="image/png" sizes="192x192"
-        href="assets/img/favicons/fav192.png?h=7562e8d2b690ec58961014a0ccee3003">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/fav16.png?h=a119ef58c4c7e9dd2f93856383e0c398">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/fav32.png?h=2998f2c2ea0b9c9d42fd9f3d643e7530">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/fav192.png?h=7562e8d2b690ec58961014a0ccee3003">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=3f30c2c47d7d23c7a994db0c862d45a5">
-    <link rel="stylesheet" href="assets/css/Aclonica.css?h=367626b56dc060bacaf8eb1624585097">
-    <link rel="stylesheet" href="assets/css/Acme.css?h=c24fe385d4a8bc4328985bce204b8c90">
-    <link rel="stylesheet" href="assets/css/Anybody.css?h=cbb8fbdcdcba692baeb21155bb9eb51e">
-    <link rel="stylesheet" href="assets/css/Artifika.css?h=e5cc1e4062ddc8928220b65e29f18e20">
-    <link rel="stylesheet" href="assets/css/Lato.css?h=6558cded3f44bbaaed0554a823af8c22">
-    <link rel="stylesheet" href="assets/css/Montserrat.css?h=1bf296816cf4a2662621eb98dda3b185">
-    <link rel="stylesheet" href="assets/css/Orbitron.css?h=db5110360f08bfa0dfede2392affb007">
-    <link rel="stylesheet" href="assets/css/Poppins.css?h=62d350c340bc6f4db30619dda8203ab1">
-    <link rel="stylesheet" href="assets/css/Roboto.css?h=6ad12ebdf23b877eca203a2165b88c80">
+    <link rel="stylesheet" href="assets/css/Aclonica.css?h=2cf240c2496263018409dd93de665712">
+    <link rel="stylesheet" href="assets/css/Acme.css?h=592d6276fbc41c889c88a97fdc2276ae">
+    <link rel="stylesheet" href="assets/css/Anybody.css?h=5ee7dc5d9c6601f639587bc9baf503cb">
+    <link rel="stylesheet" href="assets/css/Artifika.css?h=48fa4d952754460cc8f9eecadcd99e29">
+    <link rel="stylesheet" href="assets/css/Lato.css?h=57de7766361728407d70d3aab4a8bf54">
+    <link rel="stylesheet" href="assets/css/Montserrat.css?h=2f9ce4d6862519cd86011d083e59650b">
+    <link rel="stylesheet" href="assets/css/Orbitron.css?h=802d4fbaa3fec60fd7979b58ae312edb">
+    <link rel="stylesheet" href="assets/css/Poppins.css?h=57e14b14fa50ae368422cc097aba1303">
+    <link rel="stylesheet" href="assets/css/Roboto.css?h=a8e9244a398da4002da942f1022027e0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/main.css?h=48e6f923e31bd718c33e238ea055c043">
+    <link rel="stylesheet" href="assets/css/main.css?h=302eda6872ea0347b3435660cd46cca0">
 </head>
 
 <body>
@@ -35,31 +30,21 @@
         <div class="tada animated brand-logo-container">
             <h1>Sky<span>Wise</span></h1>
             <div class="logo-gif-container">
-                <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_jmgekfqg.json" mode="bounce"
-                    background="transparent" speed="1" loop="" autoplay=""></lottie-player>
+                <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_jmgekfqg.json" mode="bounce" background="transparent" speed="1" loop="" autoplay=""></lottie-player>
             </div>
         </div>
-        <div class="input-container"><i class="far fa-user-circle"></i><input type="text" id="username"
-                class="reg-username-input register-input" placeholder="Username" autofocus="" autocomplete="on"
-                required=""></div>
-        <div class="input-container"><i class="fas fa-mail-bulk"></i><input type="email" id="email"
-                class="email-input register-input" placeholder="Email" required=""></div>
-        <div class="input-container"><i class="fas fa-key" id="key1"></i><input type="password" id="password"
-                class="reg-password-input register-input" placeholder="Password" required=""
-                oninput="passwordMatchIndicator()"><i class="fas fa-eye" id="eyeIcon"
-                onclick="togglePasswordVisibility('password', 'eyeIcon')"></i></div>
-        <div class="input-container"><i class="fas fa-key" id="key2"></i><input type="password" id="cnfpassword"
-                class="reg-cnfpassword-input register-input" placeholder="Confirm Password" required=""
-                oninput="passwordMatchIndicator()"><i class="fas fa-eye" id="cnfEyeIcon"
-                onclick="togglePasswordVisibility('cnfpassword', 'cnfEyeIcon')"></i></div>
-        <div class="register-button-container"><button class="btn btn-primary register button-control"
-                type="button">Register</button></div>
+        <div class="input-container"><i class="far fa-user-circle"></i><input type="text" id="username" class="reg-username-input register-input" placeholder="Username" autofocus="" autocomplete="on" required=""></div>
+        <div class="input-container"><i class="fas fa-mail-bulk"></i><input type="email" id="email" class="email-input register-input" placeholder="Email" required=""></div>
+        <div class="input-container"><i class="fas fa-globe-americas"></i><input type="text" id="location" class="location-input register-input" placeholder="Location" required=""></div>
+        <div class="input-container"><i class="fas fa-key" id="key1"></i><input type="password" id="password" class="reg-password-input register-input" placeholder="Password" required="" oninput="passwordMatchIndicator()"><i class="fas fa-eye" id="eyeIcon" onclick="togglePasswordVisibility(&#39;password&#39;, &#39;eyeIcon&#39;)"></i></div>
+        <div class="input-container"><i class="fas fa-key" id="key2"></i><input type="password" id="cnfpassword" class="reg-cnfpassword-input register-input" placeholder="Confirm Password" required="" oninput="passwordMatchIndicator()"><i class="fas fa-eye" id="cnfEyeIcon" onclick="togglePasswordVisibility(&#39;cnfpassword&#39;, &#39;cnfEyeIcon&#39;)"></i></div>
+        <div class="register-button-container"><button class="btn btn-primary register button-control" type="button">Register</button></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.min.js"></script>
     <script src="assets/js/bs-init.js?h=ec5d4df3c798a2943b2ecbac76ebfde0"></script>
-    <script src="assets/js/auth.js?h=6e30b7cbbf254a31527c34a779b59764"></script>
     <script src="assets/js/passChecker.js?h=786c836da190ab192faba8a2c4461fd5"></script>
+    <script src="assets/js/regAuth.js?h=8faf24a95bc507ca08127a3366c8b242"></script>
 </body>
 
 </html>
