--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>SkyWise</title>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/fav16.png?h=a119ef58c4c7e9dd2f93856383e0c398">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/fav32.png?h=2998f2c2ea0b9c9d42fd9f3d643e7530">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/fav192.png?h=7562e8d2b690ec58961014a0ccee3003">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180"
+        href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="assets/img/favicons/fav16.png?h=a119ef58c4c7e9dd2f93856383e0c398">
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="assets/img/favicons/fav32.png?h=2998f2c2ea0b9c9d42fd9f3d643e7530">
+    <link rel="icon" type="image/png" sizes="180x180"
+        href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
+    <link rel="icon" type="image/png" sizes="192x192"
+        href="assets/img/favicons/fav192.png?h=7562e8d2b690ec58961014a0ccee3003">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=3f30c2c47d7d23c7a994db0c862d45a5">
     <link rel="stylesheet" href="assets/css/Aclonica.css?h=2cf240c2496263018409dd93de665712">
     <link rel="stylesheet" href="assets/css/Acme.css?h=592d6276fbc41c889c88a97fdc2276ae">
@@ -31,12 +36,15 @@
             <div class="tada animated brand-logo-container">
                 <h1>Sky<span>Wise</span></h1>
                 <div class="logo-gif-container">
-                    <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_jmgekfqg.json" mode="bounce" background="transparent" speed="1" loop="" autoplay=""></lottie-player>
+                    <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_jmgekfqg.json" mode="bounce"
+                        background="transparent" speed="1" loop="" autoplay=""></lottie-player>
                 </div>
             </div>
-            <h2 class="weather-widget-city">CityName</h2><img class="img-fluid weather-widget-icon-main" src="assets/img/weather-icons/default.png?h=302761b0fe5041dfb65ccfe4e5c1dba8" alt="weather-icon">
+            <h2 class="weather-widget-city">CityName</h2><img class="img-fluid weather-widget-icon-main"
+                src="assets/img/weather-icons/default.png?h=302761b0fe5041dfb65ccfe4e5c1dba8" alt="weather-icon">
             <p id="metrics-text" class="weather-widget-temp-main">00℃</p>
-            <p class="temp-description">NA</p><button class="btn btn-primary enter button-control" type="button" onclick="location.href =&#39;login.html&#39;">Enter</button>
+            <p class="temp-description">NA</p><button class="btn btn-primary enter button-control" type="button"
+                onclick="location.href =&#39;app.html&#39;">Enter</button>
         </div>
     </div><!-- End: Landing-Page-Widget -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
