--- a/views/app.html
+++ b/views/app.html
@@ -11,18 +11,18 @@
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/fav180.png?h=8c450abd01546622678697f22db3dc76">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/fav192.png?h=7562e8d2b690ec58961014a0ccee3003">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=3f30c2c47d7d23c7a994db0c862d45a5">
-    <link rel="stylesheet" href="assets/css/Aclonica.css?h=2cf240c2496263018409dd93de665712">
-    <link rel="stylesheet" href="assets/css/Acme.css?h=592d6276fbc41c889c88a97fdc2276ae">
-    <link rel="stylesheet" href="assets/css/Anybody.css?h=5ee7dc5d9c6601f639587bc9baf503cb">
-    <link rel="stylesheet" href="assets/css/Artifika.css?h=48fa4d952754460cc8f9eecadcd99e29">
-    <link rel="stylesheet" href="assets/css/Lato.css?h=57de7766361728407d70d3aab4a8bf54">
-    <link rel="stylesheet" href="assets/css/Montserrat.css?h=2f9ce4d6862519cd86011d083e59650b">
-    <link rel="stylesheet" href="assets/css/Orbitron.css?h=802d4fbaa3fec60fd7979b58ae312edb">
-    <link rel="stylesheet" href="assets/css/Poppins.css?h=57e14b14fa50ae368422cc097aba1303">
-    <link rel="stylesheet" href="assets/css/Roboto.css?h=a8e9244a398da4002da942f1022027e0">
+    <link rel="stylesheet" href="assets/css/Aclonica.css?h=d0798296ab5cc4883fdb481fd3bc3251">
+    <link rel="stylesheet" href="assets/css/Acme.css?h=a7b374ab161834e88174b00cdb4a3cad">
+    <link rel="stylesheet" href="assets/css/Anybody.css?h=11971b208a8a6d06f4af20e7710d1b00">
+    <link rel="stylesheet" href="assets/css/Artifika.css?h=2feabe3fd8116b89e94c41eaabbf3bab">
+    <link rel="stylesheet" href="assets/css/Lato.css?h=53c252a0281099ee6497f0fbdf1dc3d2">
+    <link rel="stylesheet" href="assets/css/Montserrat.css?h=0bc2a65f226a8573f5c0921cac376ee3">
+    <link rel="stylesheet" href="assets/css/Orbitron.css?h=056f59d97135cdabc390594cef1fe15e">
+    <link rel="stylesheet" href="assets/css/Poppins.css?h=5fccd2d2a3b77bf6d16d1c5aefe33353">
+    <link rel="stylesheet" href="assets/css/Roboto.css?h=563233171c86f41ccdc3a365b04652a4">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/app.css?h=de0099ddbc3c4b7603de2980021cef08">
+    <link rel="stylesheet" href="assets/css/app.css?h=1323d0aab9b2fb11db3f3d65ee36d036">
 </head>
 
 <body>
@@ -34,8 +34,9 @@
                 <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_jmgekfqg.json" mode="bounce" background="transparent" speed="1" loop="" autoplay=""></lottie-player>
             </div>
         </div>
-        <div class="tada animated city-search-container"><i class="fas fa-search-location" data-bss-hover-animate="flash" width="2em" height="2em" style="font-size: 25px;"></i>
+        <div class="tada animated city-search-container"><i class="fas fa-search-location get-location"></i>
             <form class="get-weather"><input class="form-control location-search-input" type="search" id="location-search-input" placeholder="Location" spellcheck="false"></form>
+            <div class="exit-container"><i class="fas fa-home go-home"></i><i class="fas fa-sign-out-alt sign-out"></i></div>
         </div>
     </header><!-- End: app-header -->
     <!-- Start: Master-weather-container -->
